2008-12-11  Neal H. Walfield  <neal@gnu.org>

	* zalloc.c (zalloc_internal): Only assert that ZALLOC_MEMORY is
	zero if the requested allocation is for PAGESIZE bytes of memory.

2008-11-18  Neal H. Walfield  <neal@gnu.org>

	* rm.h (RM_fault): Define.
	(rm_method_id_string): Handle it.
	(fault): New RPC.
	* server.c (server_loop): Implement it.

2008-11-18  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Add code to the page fault handler that
	not only map the faulted page but also some following pages.
	Leave disabled.

2008-11-18  Neal H. Walfield  <neal@gnu.org>

	* activity.c (activity_destroy): Only print configuration when
	destroying the root activity.

2008-11-18  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): Count the number of shared pages that are
	unmapped, the total number of active pages and the total number of
	inactive pages.  Print this information.

2008-11-18  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): Update use of profile_start to match new
	API.
	* pager.c (pager_collect): Likewise.

2008-11-17  Neal H. Walfield  <neal@gnu.org>

	* object.h (struct object_desc): Add field maybe_folio_desc.
	(objects_folio): Use it if valid.  If not, update it.
	
2008-11-17  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_init): Don't clear BUFFER or OBJECT_DESCS.
	* thread.c (thread_init): Don't clear BUFFER.

2008-11-17  Neal H. Walfield  <neal@gnu.org>

	* server.c (struct fault_info): Remove struct.
	(page_fault): Remove function.  Inline code in callers.
	(server_loop): Comment out code that prefaults pages in cap_copy
	and object_discarded_clear.

2008-11-16  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): Count the number of shared pages which were
	unmapped, the total number of active pages and the total number of
	inactive pages.  Also print that.

2008-11-16  Neal H. Walfield  <neal@gnu.org>

	* cap.c (cap_to_object_internal): Don't clear CAP->TYPE if
	object_find returns NULL.